# sorts.me

./: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run.bat
.agents/: AGENTS.md
sorts/: cli.py
sorts/assets/data/: global_defaults.json  mahindra_clubs.html  mahindra_seed.json  verified_clubs.json
sorts/bot/: bot.py  utils.py
sorts/bot/cogs/: about.py  admin.py  clubs.py  events.py  feedback.py  sort.py
sorts/bot/views/: admin_preview.py  club_list.py  questionnaire.py  setup_onboarding.py
sorts/config/: settings.py
sorts/core/: interfaces.py
sorts/core/domain/: entities.py  exceptions.py
sorts/core/extractor/: bs4_extractor.py  selector_detector.py
sorts/core/importer/: pdf_parser.py  pipeline.py
sorts/core/questions/: variance_selector.py
sorts/core/recommendation/: deterministic_engine.py  explanation_generator.py
sorts/core/traits/: rule_trait_inferencer.py
sorts/database/: connection.py  models.py
sorts/services/: club_service.py  import_service.py  seed_service.py  session_service.py  training_service.py
sorts/web/: compliance.py
tests/: test_events.py  test_importer.py  test_qubit_club.py  test_question_engine.py  test_recommendation.py  test_services.py  test_training.py  test_verified_registry.py
