[project]
name = "sorts-me"
version = "0.1.0"
description = "Sorts.me V1 - Adaptive Campus Guide"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nextcord>=2.6.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
